Cleaning up webserver interface
